# Chispart-App

./: AGENTS.md  AUTO_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  CRUSH.md  DIRECTORY_ANALYSIS_INTEGRATION.md  Dockerfile  FINAL_SUMMARY.md  FINAL_WEB_UI_IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY.md  LICENSE  MANIFEST.in  QWEN.md  README.md  WEB_UI_IMPROVEMENTS.md  check_server.py  directory_analysis_patch.diff  directory_analysis_patch_v2.diff  docker-compose.yml  example_code.py  logging.conf  main.py  models.json  mypy.ini  nueva.py  nueva.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test_blackbox.py  test_directory_analysis.py  test_endpoints.py  test_fileexplorer.html
blackbox_hybrid_tool/: __init__.py  exceptions.py
blackbox_hybrid_tool/cli/: __init__.py  main.py  media.py
blackbox_hybrid_tool/config/: chispart.json  chispart.omp.json  chispart.omp.json.bak  models.json  models.json.backup  settings.py
blackbox_hybrid_tool/core/: __init__.py  ai_client.py  (+1 more)
docs/: BRANDING.md  deployment.md  media_embed.md
frontend/: index.html
multi_agent_workflow/: agents.py  main.py  orchestrator.py  tools.py
static/: playground_final.html  playground_improved.html
tests/: __init__.py  test_ai_client.py  test_ai_orchestrator_extra.py  test_cli.py  test_image_model_limits.py  test_image_multiprompt.py  test_media_embedding.py  test_test_generator.py  test_utils_edge_cases.py  test_utils_patcher_and_repo.py  test_utils_ssh.py  test_utils_web_and_github.py  test_video_multiprompt.py  test_video_prompt_enhancement.py
(+7 files in other folders)
